[tool.poetry]
name = "initial-notebooks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "initial_notebooks"}]

[tool.poetry.dependencies]
python = "^3.10"
agate = "1.6.3"
aiohttp = "3.8.3"
aiosignal = "1.2.0"
alembic = "1.8.1"
amqp = "5.1.1"
anyio = "3.6.1"
appnope = "0.1.3"
argon2-cffi = "21.3.0"
argon2-cffi-bindings = "21.2.0"
asttokens = "2.2.1"
async-timeout = "4.0.2"
attrs = "22.1.0"
autoflake = "1.6.1"
babel = "2.12.1"
backcall = "0.2.0"
base58 = "2.1.1"
beautifulsoup4 = "4.12.0"
betterproto = "1.2.5"
billiard = "3.6.4.0"
bitarray = "2.6.0"
black = "22.8.0"
bleach = "6.0.0"
boto3 = "1.26.98"
botocore = "1.29.98"
cachetools = "5.3.0"
celery = "5.2.7"
certifi = "2022.9.24"
cffi = "1.15.1"
charset-normalizer = "2.1.1"
click = "8.1.3"
click-didyoumean = "0.3.0"
click-plugins = "1.1.1"
click-repl = "0.2.0"
colorama = "0.4.6"
comm = "0.1.3"
coverage = "6.4.4"
cytoolz = "0.12.0"
dbt-bigquery = "1.4.1"
dbt-core = "1.4.4"
dbt-extractor = "0.4.1"
debugpy = "1.6.6"
decorator = "5.1.1"
defusedxml = "0.7.1"
eth-abi = "2.2.0"
eth-account = "0.5.9"
eth-hash = "0.5.0"
eth-keyfile = "0.5.1"
eth-keys = "0.3.4"
eth-rlp = "0.2.1"
eth-typing = "2.3.0"
eth-utils = "1.9.5"
executing = "1.2.0"
fastapi = "0.85.0"
fastjsonschema = "2.16.3"
flake8 = "5.0.4"
frozenlist = "1.3.1"
future = "0.18.3"
google-auth = "2.16.2"
google-cloud-bigquery = "3.6.0"
google-cloud-core = "2.3.2"
google-cloud-storage = "2.7.0"
google-crc32c = "1.5.0"
google-resumable-media = "2.4.1"
googleapis-common-protos = "1.58.0"
grpc-google-iam-v1 = "0.12.6"
grpcio = "1.51.3"
grpcio-status = "1.48.2"
grpclib = "0.4.3"
h11 = "0.14.0"
h2 = "4.1.0"
hexbytes = "0.3.0"
hologram = "0.0.15"
hpack = "4.0.0"
hyperframe = "6.0.1"
idna = "3.4"
importlib-metadata = "6.1.0"
iniconfig = "1.1.1"
ipfshttpclient = "0.8.0a2"
ipykernel = "6.22.0"
ipython = "8.11.0"
ipython-genutils = "0.2.0"
ipywidgets = "8.0.5"
isodate = "0.6.1"
isort = "5.10.1"
jedi = "0.18.2"
jinja2 = "3.1.2"
jmespath = "1.0.1"
jsonschema = "3.2.0"
jupyter = "1.0.0"
jupyter-console = "6.6.3"
jupyter-events = "0.6.3"
jupyter-client = "8.1.0"
jupyter-core = "5.3.0"
jupyter-server = "2.5.0"
jupyter-server-terminals = "0.4.4"
jupyterlab-pygments = "0.2.2"
jupyterlab-widgets = "3.0.6"
kombu = "5.2.4"
leather = "0.3.4"
logbook = "1.5.3"
loguru = "0.7.0"
lru-dict = "1.1.8"
lxml = "4.9.2"
mako = "1.2.3"
markupsafe = "2.1.1"
mashumaro = "3.3.1"
matplotlib-inline = "0.1.6"
mccabe = "0.7.0"
minimal-snowplow-tracker = "0.0.2"
mistune = "2.0.5"
msgpack = "1.0.4"
multiaddr = "0.0.9"
multidict = "6.0.2"
mypy-extensions = "0.4.3"
nbclassic = "0.5.3"
nbclient = "0.7.2"
nbconvert = "7.2.10"
nbformat = "5.8.0"
nest-asyncio = "1.5.6"
netaddr = "0.8.0"
networkx = "2.8.8"
notebook = "6.5.3"
notebook-shim = "0.2.2"
numpy = "1.24.2"
packaging = "21.3"
pandas = "1.5.3"
pandocfilters = "1.5.0"
parsedatetime = "2.4"
parsimonious = "0.8.1"
parso = "0.8.3"
pathspec = "0.10.1"
pexpect = "4.8.0"
pickleshare = "0.7.5"
platformdirs = "2.5.2"
pluggy = "1.0.0"
prometheus-client = "0.16.0"
prompt-toolkit = "3.0.31"
proto-plus = "1.22.2"
protobuf = "3.20.2"
psutil = "5.9.4"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
py = "1.11.0"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pycodestyle = "2.9.1"
pycparser = "2.21"
pycryptodome = "3.15.0"
pydantic = "1.10.2"
pyflakes = "2.5.0"
pygments = "2.14.0"
pyparsing = "3.0.9"
pyrsistent = "0.18.1"
pytest = "7.1.3"
pytest-cov = "3.0.0"
python-dateutil = "2.8.2"
python-dotenv = "0.21.0"
python-json-logger = "2.0.7"
python-slugify = "8.0.1"
pytimeparse = "1.1.8"
pytz = "2022.2.1"
pyyaml = "6.0"
pyzmq = "25.0.2"
qtconsole = "5.4.1"
qtpy = "2.3.0"
requests = "2.28.1"
rfc3339-validator = "0.1.4"
rfc3986-validator = "0.1.1"
rlp = "2.0.1"
rsa = "4.9"
s3transfer = "0.6.0"
send2trash = "1.8.0"
six = "1.16.0"
sniffio = "1.3.0"
soupsieve = "2.4"
sqlalchemy = "1.4.41"
sqlparse = "0.4.3"
stack-data = "0.6.2"
starlette = "0.20.4"
stringcase = "1.2.0"
tenacity = "8.1.0"
terminado = "0.17.1"
text-unidecode = "1.3"
tinycss2 = "1.2.1"
tomli = "2.0.1"
toolz = "0.12.0"
tornado = "6.2"
tqdm = "^4.65.0"
publicsuffix2 = "^2.20191221"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
